fix(t03): preserve nullable scalar map values